--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.3.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-quartz -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
