--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,7 +5,7 @@ spring.sql.init.platform=h2
 spring.sql.init.schema-locations=classpath:/dbH2/00-schema.sql
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
